--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Git övning</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<header>This is my header</header>
 <body>
     
 </body>
