--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <header>This is my header</header>
 <body>
     <main>This is my main</main>
+    <aside>This is my aside</aside>
     
 </body>
 </html>
