--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <main>This is my main</main>
     <aside>This is my aside</aside>
-    
+    <footer>This is my footer</footer>
 </body>
 </html>
